# violaceous

./: Cargo.toml  README.md  TODO.md  build.rs  gen-purple-bindings.sh
libpurple-sys/: Cargo.toml  build.rs
libpurple-sys/src/: lib.rs
src/: account.rs  connection.rs  core.rs  eventloop.rs  lib.rs  util.rs
