[package]
name = "purple-sys"
version = "0.1.0"
authors = ["Jack Coulter <jscinoz@jscinoz.so>"]
keywords = ["pidgin", "purple", "libpurple"]
build = "build.rs"
links = "purple"

[build-dependencies]
pkg-config = "*"
clippy = "*"
syntex_syntax = "*"
#bindgen = { git = "https://github.com/crabtw/rust-bindgen.git" }
bindgen = { path = "../rust-bindgen" }

[dependencies]
libc = "*"
va_list = "*"
glib-sys = { git = "https://github.com/gtk-rs/sys.git" }
gobject-sys = { git = "https://github.com/gtk-rs/sys.git" }
